--- a/vignettes/thesis.bib
+++ b/vignettes/thesis.bib
@@ -32,6 +32,86 @@
   publisher={Wiley Online Library}
 }
 
+@article{whelan2017prior,
+  title={Prior distributions for the Bradley-Terry model of paired comparisons},
+  author={Whelan, John T},
+  journal={arXiv preprint arXiv:1712.05311},
+  year={2017}
+}
+
+
+
+@Article{IssaMattos2022,
+author={Issa Mattos, David
+and Martins Silva Ramos, {\'E}rika},
+title={Bayesian paired comparison with the bpcs package},
+journal={Behavior Research Methods},
+year={2022},
+month={Aug},
+day={01},
+volume={54},
+number={4},
+pages={2025-2045},
+abstract={This article introduces the bpcs R package (Bayesian Paired Comparison in Stan) and the statistical models implemented in the package. This package aims to facilitate the use of Bayesian models for paired comparison data in behavioral research. Bayesian analysis of paired comparison data allows parameter estimation even in conditions where the maximum likelihood does not exist, allows easy extension of paired comparison models, provides straightforward interpretation of the results with credible intervals, has better control of type I error, has more robust evidence towards the null hypothesis, allows propagation of uncertainties, includes prior information, and performs well when handling models with many parameters and latent variables. The bpcs package provides a consistent interface for R users and several functions to evaluate the posterior distribution of all parameters to estimate the posterior distribution of any contest between items and to obtain the posterior distribution of the ranks. Three reanalyses of recent studies that used the frequentist Bradley--Terry model are presented. These reanalyses are conducted with the Bayesian models of the bpcs package, and all the code used to fit the models, generate the figures, and the tables are available in the online appendix.},
+issn={1554-3528},
+doi={10.3758/s13428-021-01714-2}
+}
+
+@article{davidson_beaver_1977,
+ ISSN = {0006341X, 15410420},
+ URL = {http://www.jstor.org/stable/2529467},
+ abstract = {The Bradley-Terry model for paired comparisons is generalized to account for the effect of the order of presentation of the objects within a pair. A multiplicative order effect is suggested as an alternative to the additive order effect proposed by Beaver and Gokhale (1975). The multiplicative order effect is then incorporated into the tie models given by Rao-Kupper and Davidson (1967, 1970). The associated estimation and testing procedures are presented with emphasis on likelihood methods as well as on the weighted least squares methods recently applied to paired comparison situations by Imrey, Johnson, and Koch (1976) and by Beaver (1977). Two numerical examples are provided, one with ties and one without.},
+ author = {Roger R. Davidson and Robert J. Beaver},
+ journal = {Biometrics},
+ number = {4},
+ pages = {693--702},
+ publisher = {[Wiley, International Biometric Society]},
+ title = {On Extending the {Bradley-Terry} Model to Incorporate Within-Pair Order Effects},
+ urldate = {2024-04-20},
+ volume = {33},
+ year = {1977}
+}
+
+
+
+@article{bradley_Terry1952,
+ ISSN = {00063444},
+ author = {Ralph Allan Bradley and Milton E. Terry},
+ journal = {Biometrika},
+ number = {3/4},
+ pages = {324--345},
+ publisher = {[Oxford University Press, Biometrika Trust]},
+ title = {Rank Analysis of Incomplete Block Designs: I. The Method of Paired Comparisons},
+ urldate = {2023-01-24},
+ volume = {39},
+ year = {1952}
+}
+
+@article{demartino2024alternative,
+  title={Alternative ranking measures to predict international football results},
+  author={Macr{\`\i} Demartino, Roberto and Egidi, Leonardo and Torelli, Nicola},
+  journal={arXiv preprint arXiv:2405.10247},
+  year={2024}
+}
+
+
+@article{davidson1970,
+ ISSN = {01621459},
+
+ abstract = {This study is concerned with the extension of the Bradley-Terry model for paired comparisons to situations which allow an expression of no preference. A new model is developed and its performance compared with a model proposed by Rao and Kupper. The maximum likelihood estimates of the parameters are found using an iterative procedure which, under a weak assumption, converges monotonically to the solution of the likelihood equations. It is noted that for a balanced paired comparison experiment the ranking obtained from the maximum likelihood estimates agrees with that obtained from a scoring system which allots two points for a win, one for a tie and zero for a loss. The likelihood ratio test of the hypothesis of equal preferences is shown to have the same asymptotic efficiency as that for the Rao-Kupper model. Two examples are presented, one of which introduces a set of data for an unbalanced paired comparison experiment. Initial applications of the test of goodness of fit suggest that the proposed model yields a reasonable representation of actual experimentation.},
+ author = {Roger R. Davidson},
+ journal = {Journal of the American Statistical Association},
+ number = {329},
+ pages = {317--328},
+ publisher = {[American Statistical Association, Taylor & Francis, Ltd.]},
+ title = {On Extending the Bradley-Terry Model to Accommodate Ties in Paired Comparison Experiments},
+ urldate = {2023-01-26},
+ volume = {65},
+ year = {1970}
+}
+
+
+
 @book{Casella_Robert_2013,
   title={Monte Carlo statistical methods},
   author={Robert, Christian and Casella, George},
