--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -306,6 +306,7 @@ library(bayesplot)
 library(loo)
 library(ggplot2)
 library(dplyr)
+library(tidyverse)
 ```
 
 # Bradley-Terry-Davidson model fit
